[package]
name = "bellman_osm"
version = "0.1.1"
authors = ["Dominik Bucher <dominik.bucher@gmail.com>"]

[dependencies]
byteorder = "0.5.3"
postgres = "0.13.3"
time = "0.1"
pbr = "1.0.0"
iron = "*"
params = "*"
router = "*"
spade = "1.2.*"
cgmath = ">=0.11.0"
num = "0.1.*"
persistent = "*"
staticfile = "*"
mount = "*"
geojson = "0.4.3"
rustc-serialize = "0.3"
osmpbfreader = "0.11.1"

[lib]
name = "rust_geotiff"
path = "../rust-geotiff/src/lib.rs"
